# gym-walk

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: test.yml
gym_walk/: __init__.py
gym_walk/envs/: __init__.py  walk_env.py  walk_five_states.py  walk_twenty_one_states.py
tests/: test_walk.py
